--- a/src/style.css
+++ b/src/style.css
@@ -6,11 +6,17 @@ body{
 
 h1{
     margin-top: 20px;
+    color: rgb(110, 124, 232);
+    line-height: 100px;
 }
 .container{
     margin: 20px 20px 20px 20px;
 }
-.buttons 
+
+main {
+    border: 5px 5px 5px 5px solid white;
+}
+
 .first-row
  .second-row {
     margin-top: 30px;
@@ -23,7 +29,7 @@ h1{
 
 button{
     padding: 30px;
-    border-radius: 10px;
+    border-radius: 9px;
     font-size: 20px;
     width: 100px;
 }
